{
    "name": "Inputs",
    "maps": [
        {
            "name": "Controller",
            "id": "7a99bf71-90bb-4053-b1a8-366b146a3587",
            "actions": [
                {
                    "name": "LeftAnalog",
                    "type": "Button",
                    "id": "465243a6-bb1a-42ce-8d6c-0c12bab562a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightAnalog",
                    "type": "Button",
                    "id": "71de56e8-fd2e-4c29-b47a-dfb3d822b704",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightAnalogDown",
                    "type": "Button",
                    "id": "57b402c1-881d-4862-b3f4-4f029f98dfd8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e41458a-cee8-47b6-881d-cf39e4f8053e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAnalog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea525589-3279-42c1-be5f-4998ee1618ba",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightAnalog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc4f69f7-9087-4e20-96f7-ec746d4547a8",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightAnalogDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "6d851d84-3711-40cd-b593-4345ea603e5a",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "d13e224b-ded6-4703-988d-3c57f0530c51",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "b620ae17-4252-4f18-ad88-972d6925c64f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "77befa7b-ec00-47dc-9ead-e6bc6132fdf2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "24791605-1ec9-4158-8a77-73afd81adc62",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "c697cf1f-122c-469b-a991-d308f4c8ea9d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "f64865d3-8189-4108-9b82-73dfb34d6fd3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LMB",
                    "type": "Button",
                    "id": "4b258a9f-f8ec-489f-b063-f1cdfcb88309",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb942ee2-8970-4993-9cce-653eb4d7eaa2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "babf5c73-7e3d-41d5-abb0-c7736412a02e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cb27f53-602b-46bc-8af1-848859dc41a4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dabd6232-d71c-413e-a713-8d87a11ce80e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e68371c5-cb48-4d24-90a2-93cb38c8ebbe",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbe9b2ce-27b1-463f-9421-4d88c4936b28",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af9b062f-a980-4c15-97cc-a8e2c8a76650",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}